fix issue of non-square music cover not centered

--- a/configs/nixos/msi/tsssni/visual/config/ags/dashboard/dashboard.scss
+++ b/configs/nixos/msi/tsssni/visual/config/ags/dashboard/dashboard.scss
@@ -42,6 +42,7 @@
 			min-width: 40px;
 			min-height: 40px;
 			background-repeat: no-repeat;
+            background-position: center;
 			margin: 4px;
 		}
 		.title {
